--- a/src/v00v.Views/Popup/PopupControl.xaml
+++ b/src/v00v.Views/Popup/PopupControl.xaml
@@ -49,7 +49,7 @@
                 <Button
                     Grid.Row="0"
                     Grid.Column="2"
-                    Command="{Binding Context.CloseCommand}"
+                    Command="{Binding Context.CloseCommand, Mode=OneTime}"
                     Width="16"
                     Height="16"
                     Margin="8"
@@ -74,8 +74,8 @@
                     MinWidth="380"
                     MinHeight="20"
                     Margin="12,10,12,12"
-                    Items="{Binding Contexts}"
-                    SelectedItem="{Binding Context}">
+                    Items="{Binding Contexts, Mode=OneWay}"
+                    SelectedItem="{Binding Context, Mode=OneWay}">
                     
                     <Carousel.DataTemplates>
 
