--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -28,9 +28,9 @@
                 </DataTemplate>
             </ListBox.DataTemplates>
 
-            <!--<Menu>
-             
-                <MenuItem Header="To:Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{markup:Static enums:WatchState.Watched}" IsVisible="{Binding !SelectedEntry.Watched}">
+            <ListBox.ContextMenu>
+                <ContextMenu>
+                    <!--<MenuItem Header="To:Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{markup:Static enums:WatchState.Watched}" IsVisible="{Binding !SelectedEntry.Watched}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Checkmark32.png?assembly=v00v.MainApp"/>
                     </MenuItem.Icon>
@@ -39,64 +39,65 @@
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Time32.png?assembly=v00v.MainApp"/>
                     </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}">
-                    <MenuItem.Icon>
+                </MenuItem>-->
+                    <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link">
-                    <MenuItem.Icon>
+                    </MenuItem.Icon>-->
+                    </MenuItem>
+                    <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="title">
-                    <MenuItem.Icon>
+                    </MenuItem.Icon>-->
+                    </MenuItem>
+                    <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="title">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Go to Parent" Command="{Binding SelectChannelCommand, Mode=OneWay}" IsVisible="{Binding IsStateChannel}">
-                    <MenuItem.Icon>
+                    </MenuItem.Icon>-->
+                    </MenuItem>
+                    <MenuItem Header="Go to Parent" Command="{Binding GoToParentCommand, Mode=OneWay}" IsVisible="{Binding IsParentState}">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.LeftArrow32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Download">
-                    <MenuItem.Icon>
+                    </MenuItem.Icon>-->
+                    </MenuItem>
+                    <MenuItem Header="Download">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                    <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
-                        <MenuItem.Icon>
+                    </MenuItem.Icon>-->
+                        <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
+                            <!--<MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="audio">
-                        <MenuItem.Icon>
+                        </MenuItem.Icon>-->
+                        </MenuItem>
+                        <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="audio">
+                            <!--<MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="video">
-                        <MenuItem.Icon>
+                        </MenuItem.Icon>-->
+                        </MenuItem>
+                        <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="video">
+                            <!--<MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="subs">
-                        <MenuItem.Icon>
+                        </MenuItem.Icon>-->
+                        </MenuItem>
+                        <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="subs">
+                            <!--<MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
+                        </MenuItem.Icon>-->
+                        </MenuItem>
                     </MenuItem>
-                </MenuItem>
-                <MenuItem Header="Clear state" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{markup:Static enums:WatchState.Notset}" IsVisible="{Binding SelectedEntry.WatchStateSet}">
+                    <!--<MenuItem Header="Clear state" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" CommandParameter="{markup:Static enums:WatchState.Notset}" IsVisible="{Binding SelectedEntry.WatchStateSet}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Xmark32.png?assembly=v00v.MainApp"/>
                     </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Delete" Command="{Binding DeleteItemFileCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.Downloaded}">
-                    <MenuItem.Icon>
+                </MenuItem>-->
+                    <MenuItem Header="Delete" Command="{Binding DeleteItemCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.Downloaded}">
+                        <!--<MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-                
-            </Menu>-->
+                    </MenuItem.Icon>-->
+                    </MenuItem>
+                </ContextMenu>
+            </ListBox.ContextMenu>
+
         </ListBox>
 
         <Expander HorizontalAlignment="Stretch" ExpandDirection="Up" Grid.Row="1">
