--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -39,49 +39,49 @@
                 <ListBox.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link" IsVisible="{Binding !SelectedEntry.IsStatePlaylist}">
-                            <!--<MenuItem.Icon>
-                                <Image Source="resm:v0v.Application.Icons.Dark.Edit32.png?assembly=v0v.Application"/>
-                            </MenuItem.Icon>-->
+                            <MenuItem.Icon>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
+                            </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="title" IsVisible="{Binding !SelectedEntry.IsStatePlaylist}">
-                            <!--<MenuItem.Icon>
-                                <Image Source="resm:v0v.Application.Icons.Dark.Copy32.png?assembly=v0v.Application"/>
-                            </MenuItem.Icon>-->
+                            <MenuItem.Icon>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
+                            </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Download">
-                            <!--<MenuItem.Icon>
-                                <Image Source="resm:v0v.Application.Icons.Dark.Download32.png?assembly=v0v.Application"/>
-                            </MenuItem.Icon>-->
+                            <MenuItem.Icon>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
+                            </MenuItem.Icon>
                             <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="simple">
-                                <!--<MenuItem.Icon>
-                                    <Image Source="resm:v0v.Application.Icons.Dark.VideoPlay32.png?assembly=v0v.Application"/>
-                                </MenuItem.Icon>-->
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
-                                <!--<MenuItem.Icon>
-                                    <Image Source="resm:v0v.Application.Icons.Dark.VideoHd32.png?assembly=v0v.Application"/>
-                                </MenuItem.Icon>-->
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="audio">
-                                <!--<MenuItem.Icon>
-                                    <Image Source="resm:v0v.Application.Icons.Dark.Audio32.png?assembly=v0v.Application"/>
-                                </MenuItem.Icon>-->
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="video">
-                                <!--<MenuItem.Icon>
-                                    <Image Source="resm:v0v.Application.Icons.Dark.VideoOnly32.png?assembly=v0v.Application"/>
-                                </MenuItem.Icon>-->
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="subs">
-                                <!--<MenuItem.Icon>
-                                    <Image Source="resm:v0v.Application.Icons.Dark.Sub32.png?assembly=v0v.Application"/>
-                                </MenuItem.Icon>-->
+                                <MenuItem.Icon>
+                                    <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp"/>
+                                </MenuItem.Icon>
                             </MenuItem>
                         </MenuItem>
                         <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}">
-                            <!--<MenuItem.Icon>
-                                <Image Source="resm:v0v.Application.Icons.Dark.Trash32.png?assembly=v0v.Application"/>
-                            </MenuItem.Icon>-->
+                            <MenuItem.Icon>
+                                <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
+                            </MenuItem.Icon>
                         </MenuItem>
                     </ContextMenu>
                 </ListBox.ContextMenu>
