--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -28,39 +28,39 @@
             <ListBox.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Edit" Command="{Binding EditChannelCommand, Mode=OneWay}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Edit32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Sync" Command="{Binding SyncChannelCommand, Mode=OneWay}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Network32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Network32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Reload" Command="{Binding ReloadCommand, Mode=OneWay}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Refresh32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Delete" Command="{Binding DeleteChannelCommand, Mode=OneWay}" IsEnabled="{Binding !IsWorking}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Trash32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Clear" Command="{Binding ClearAddedCommand, Mode=OneWay}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Xmark32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Xmark32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Backup" Command="{Binding BackupCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.IsStateChannel}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Backup32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Backup32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Restore" Command="{Binding RestoreCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.IsStateChannel}">
-                        <!--<MenuItem.Icon>
-                            <Image Source="resm:v0v.Application.Icons.Dark.Restore32.png?assembly=v0v.Application"/>
-                        </MenuItem.Icon>-->
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Restore32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
                     </MenuItem>
                 </ContextMenu>
             </ListBox.ContextMenu>
@@ -73,7 +73,7 @@
                     <Button HorizontalAlignment="Left" Command="{Binding AddChannelCommand, Mode=OneTime}" ToolTip.Tip="Add">
                         <Panel>
                             <Ellipse />
-                            <!--<Image Source="resm:v0v.Application.Icons.Light.Plus32.png?assembly=v0v.Application" />-->
+                            <Image Source="resm:v00v.MainApp.Icons.Light.Plus32.png?assembly=v00v.MainApp" />
                         </Panel>
                     </Button>
                     <ComboBox Height="25" Width="110" Margin="0,0,0,0" ToolTip.Tip="Tag" 
@@ -89,7 +89,7 @@
                     <Button Command="{Binding SyncChannelsCommand, Mode=OneTime}" ToolTip.Tip="Sync">
                         <Panel>
                             <Ellipse />
-                            <!--<Image Source="resm:v0v.Application.Icons.Light.Settings32.png?assembly=v0v.Application" />-->
+                            <Image Source="resm:v00v.MainApp.Icons.Light.Settings32.png?assembly=v00v.MainApp" />
                         </Panel>
                     </Button>
                 </StackPanel>
