--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -2,19 +2,18 @@
     x:Class="v00v.Views.Explorer.ExplorerControl"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:explorer="clr-namespace:v00v.Views.Explorer">
+    xmlns:explorer="clr-namespace:v00v.Views.Explorer"
+    xmlns:converters="clr-namespace:v00v.Model.Converters;assembly=v00v.Model"
+    xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model">
 
     <Grid RowDefinitions="*,auto" Background="#242e44">
-        <!--<Grid.Resources>
-            <converters:EnumBooleanConverter x:Key="EnumBooleanConverter" />
-        </Grid.Resources>-->
-        <ListBox Grid.Row="0" Name="ItemList"
+        <ListBox Grid.Row="0" Name="ItemList" BorderThickness="0"
                  Items="{Binding Items}"
                  SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
                  VirtualizationMode="Simple"
-                 BorderThickness="0"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 >
 
             <!--<ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -105,14 +104,46 @@
                 <Grid ColumnDefinitions="*,auto,auto" HorizontalAlignment="Stretch" Width="{Binding $parent[Grid].Bounds.Width}">
                     <TextBox Text="{Binding SearchText, Mode=TwoWay}" HorizontalAlignment="Left"/>
                     <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0">
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By date" />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By views"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By likes"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By dislikes"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By comment"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By duration"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By title"/>
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By view diff"/>
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By date" 
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Timestamp}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Timestamp"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By views"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.View}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="View"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By likes"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Like}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Like"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By dislikes"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Dislike}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Dislike"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By comment"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Comment}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Comment"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By duration"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Duration}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Duration"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By title"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Title}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Title"
+                                     />
+                        <RadioButton GroupName="Sort" ToolTip.Tip="By view diff"
+                                     IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Diff}}"
+                                     Command="{Binding SetSortCommand, Mode=OneTime}"
+                                     CommandParameter="Diff"
+                                     />
                     </StackPanel>
                     <TextBlock Grid.Column="2" Text="{Binding Items.Count}" Margin="0,0,40,0" VerticalAlignment="Center" Foreground="#92a3b3"/>
                 </Grid>
