--- a/src/v00v.Views/Popup/PopupControl.xaml
+++ b/src/v00v.Views/Popup/PopupControl.xaml
@@ -108,10 +108,10 @@
             <!-- <Setter Property="CornerRadius" Value="8,8,0,0" /> -->
         </Style>
         
-        <Style Selector="Border.Title TextBlock">
-            <!-- <Setter Property="Foreground" Value="#ffffff" /> -->
-            <!-- <Setter Property="FontSize" Value="13" /> -->
-        </Style>
+        <!--<Style Selector="Border.Title TextBlock">
+             <Setter Property="Foreground" Value="#ffffff" /> 
+             <Setter Property="FontSize" Value="13" /> 
+        </Style>-->
         
     </UserControl.Styles>
     
