--- a/src/v00v.Views/Application/MainWindow.xaml
+++ b/src/v00v.Views/Application/MainWindow.xaml
@@ -2,6 +2,9 @@
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:v00v.Views.Application;assembly=v00v.Views"
-        Title="Test Application" Width="1200" Height="600">
+        Width="1200" 
+        Height="600"
+        Title="{Binding WindowTitle}"
+        >
     <views:MainView/>
 </Window>
